--- a/Sources/client/layout/sideMenu.html
+++ b/Sources/client/layout/sideMenu.html
@@ -1,21 +1,21 @@
 <template name="sideMenu">
-    {{#ionSideMenu side="right"}}
-        <div class="bar bar-header bar-dark">
-            <h1 class="title">Side Menu</h1>
-        </div>
-        <div class="content has-header">
-
-            <div class="list">
-                <div class="item item-divider">Such Divide</div>
-                <a class="item" href="#">{{> ionIcon icon="ios-arrow-left"}} Much conflicts.</a>
-                <a class="item" href="#">{{> ionIcon icon="ios-arrow-left"}} Such divisiv. Wow.</a>
-
-                <div class="item item-divider">Another Divide</div>
-                <a class="item" href="#">Such humans.</a>
-                <a class="item" href="#">So impulse.</a>
-                <a class="item" href="#">amaze</a>
+    {{#ionSideMenus}}
+        {{#ionSideMenu}}
+            <div class="bar bar-header bar-dark">
+                <h1 class="title">Side Menu</h1>
             </div>
+            <div class="content has-header">
+                <div class="list">
+                    <div class="item item-divider">Such Divide</div>
+                    <a class="item" href="{{pathFor 'index'}}" data-ion-menu-close>Index</a>
+                    <a class="item" href="{{pathFor 'blurredIssue'}}" data-ion-menu-close>Blurred Text Issue</a>
 
-        </div>
-    {{/ionSideMenu}}
+                    <div class="item item-divider">Another Divide</div>
+                    <a class="item" href="#">Such humans.</a>
+                    <a class="item" href="#">So impulse.</a>
+                    <a class="item" href="#">amaze</a>
+                </div>
+            </div>
+        {{/ionSideMenu}}
+    {{/ionSideMenus}}
 </template>
